--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <!-- MENU ENCABEZADO -->
     <div class="contenedor-header">
         <header>
+            <select id="language-selector" onchange="changeLanguage()">
+                <option value="es">Español</option>
+                <option value="en">English</option>
+            </select>
             <div class="logo">
-                <a href="#">Nick</a>
+                <a href="#">Leonardo Díaz</a>
             </div>
             <nav id="nav">
                 <ul>
@@ -37,8 +41,8 @@
             <div class="contenedor-img">
                 <img src="img/hero.png" alt="">
             </div>
-            <h1>NICK PEREZ</h1>
-            <h2>Ingeniero de Software - Experto UI/UX</h2>
+            <h1>Leonardo Diaz</h1>
+            <h2>Ingeniero de Sistemas | Desarrollador de Software</h2>
             <div class="redes">
                 <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -61,28 +65,16 @@
                     <h3>Datos Personales</h3>
                     <ul>
                         <li>
-                            <strong>Cumpleaños</strong>
-                            15-01-1980
-                        </li>
-                        <li>
                             <strong>Teléfono</strong>
-                            2555 5454545
+                            +57-301-6805257
                         </li>
                         <li>
                             <strong>Email</strong>
-                            cw@example.com
-                        </li>
-                        <li>
-                            <strong>Website</strong>
-                            www.example.com
-                        </li>
-                        <li>
-                            <strong>Dirección</strong>
-                            123 San Luis, Argentina
+                            maximun.neo11@gmail.com
                         </li>
                         <li>
                             <strong>Cargo</strong>
-                            <span>FREELANCE</span>
+                            <span>Desarrollador de software - Programador</span>
                         </li>
                     </ul>
                 </div>
@@ -408,5 +400,6 @@
     </footer>
 
     <script src="/script/scripst.js"></script>
+    <script src="/script/translations.js"></script>
 </body>
 </html>
