refactor: Se comenta el script de tidio para mejoras futuras

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
 
     <script src="/script/scripst.js"></script>
     <script src="/script/translations.js"></script>
-    <script src="//code.tidio.co/z5qolgwsdglupa6jsz9cxnimwxabv41e.js" async></script>
+    <!-- <script src="//code.tidio.co/z5qolgwsdglupa6jsz9cxnimwxabv41e.js" async></script> -->
 
 </body>
 
