fix: Correccion ya no se requiere esa experiencia laboral

--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
 
                     <div class="item der">
                         <h4 data-i18n="curriculum.exp2.titulo">Jefe Comercial</h4>
-                        <span class="casa" data-i18n="curriculum.exp2.empresa">Hypersoft</span>
-                        <span class="fecha" data-i18n="curriculum.exp2.fecha">01/03/2021 - 22/06/2022 (Barranquilla,
+                        <span class="casa" data-i18n="curriculum.exp2.empresa">Almacenes Exito</span>
+                        <span class="fecha" data-i18n="curriculum.exp2.fecha">01/06/2011 - 22/06/2022 (Barranquilla,
                             Colombia)</span>
                         <p data-i18n="curriculum.exp2.descripcion">Liderazgo de equipos comerciales, gestión de clientes
                             y estrategias de ventas.</p>
@@ -350,21 +350,7 @@
                         </div>
                     </div>
 
-                    <div class="item der">
-                        <h4 data-i18n="curriculum.exp3.titulo">Administrador Comercial</h4>
-                        <span class="casa" data-i18n="curriculum.exp3.empresa">Mega Tiendas</span>
-                        <span class="fecha" data-i18n="curriculum.exp3.fecha">10/11/2021 - 30/12/2021 (Cartagena,
-                            Colombia)</span>
-                        <p data-i18n="curriculum.exp3.descripcion">Gestión de ventas, abastecimiento y control de
-                            inventarios.</p>
-                        <p><strong data-i18n="curriculum.exp3.logros">Logros:</strong> <span
-                                data-i18n="curriculum.exp3.logrosTexto">Reduje productos agotados en un 10% mediante
-                                estrategias de control
-                                de inventarios.</span></p>
-                        <div class="conectord">
-                            <div class="circulod"></div>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
